# discord-openai

./: .gitignore  pyproject.toml
discord_openai/: docker-compose.yml  main.py  requirements.txt
